--- a/TUAN 12/BUOI 59/baitap/baitap2/baitap2.html
+++ b/TUAN 12/BUOI 59/baitap/baitap2/baitap2.html
@@ -13,8 +13,8 @@
   <hr>
   <p class="italic">Bách khoa toàn thư mở Wikipedia</p>
   <p class="italic">Đối với các định nghĩa khác, xem <a class="blueText" href="https://vi.wikipedia.org/wiki/Vi%E1%BB%87t_Nam_(%C4%91%E1%BB%8Bnh_h%C6%B0%E1%BB%9Bng)">Việt Nam (định hướng)</a> và <a class="blueText" href="https://vi.wikipedia.org/wiki/C%C3%A1c_t%C3%AAn_g%E1%BB%8Di_c%E1%BB%A7a_n%C6%B0%E1%BB%9Bc_Vi%E1%BB%87t_Nam">các tên gọi của nước Việt Nam.</a></p>
-  <span class="bold">Việt Nam</span>, <span>tên chính thức là <span class="bold">Cộng hòa Xã hội chủ nghĩa Việt Nam</span>, là <a class="blueText" href="https://vi.wikipedia.org/wiki/Qu%E1%BB%91c_gia">quốc gia</a> ở rìa phía đông <a href="https://vi.wikipedia.org/wiki/B%C3%A1n_%C4%91%E1%BA%A3o_%C4%90%C3%B4ng_D%C6%B0%C6%A1ng">bán đảo Đông Dương</a>,
-    nằm ở trung tâm khu vực <a href="https://vi.wikipedia.org/wiki/%C4%90%C3%B4ng_Nam_%C3%81">Đông Nam Á</a>. <a href="https://vi.wikipedia.org/wiki/H%C6%B0%E1%BB%9Bng_B%E1%BA%AFc">Phía Bắc</a> giáp <a href="https://vi.wikipedia.org/wiki/Trung_Qu%E1%BB%91c">Trung Quốc</a>, phía Tây giáp Lào và Campuchia, phía Tây Nam giáp vịnh
+  <span class="bold">Việt Nam</span>, <span>tên chính thức là <span  class="bold">Cộng hòa Xã hội chủ nghĩa Việt Nam</span>, là <a class="blueText" href="https://vi.wikipedia.org/wiki/Qu%E1%BB%91c_gia">quốc gia</a> ở rìa phía đông <a class="blueText"  href="https://vi.wikipedia.org/wiki/B%C3%A1n_%C4%91%E1%BA%A3o_%C4%90%C3%B4ng_D%C6%B0%C6%A1ng">bán đảo Đông Dương</a>,
+    nằm ở trung tâm khu vực <a class="blueText" href="https://vi.wikipedia.org/wiki/%C4%90%C3%B4ng_Nam_%C3%81">Đông Nam Á</a>. <a class="blueText" href="https://vi.wikipedia.org/wiki/H%C6%B0%E1%BB%9Bng_B%E1%BA%AFc">Phía Bắc</a> giáp <a class="blueText"  href="https://vi.wikipedia.org/wiki/Trung_Qu%E1%BB%91c">Trung Quốc</a>, phía Tây giáp Lào và Campuchia, phía Tây Nam giáp vịnh
     Thái Lan, phía Đông và phía Nam giáp Biển Đông. Thủ đô là Hà Nội từ
     năm 1976, với Thành phố Hồ Chí Minh là thành phố lớn nhất về kinh tế và đông dân nhất. Việt Nam thiết lập quan hệ
     ngoại giao với 188 quốc gia[10] và là
